--- a/CD_RECYCLE/.gitignore
+++ b/CD_RECYCLE/.gitignore
@@ -1,2 +1,10 @@
 
 Pods/*
+## Xcode Patch
+*.xcodeproj/*
+!*.xcodeproj/prject.pdxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+
+### Xcode Patch ###
+**/xcshareddata/WorkspaceSettings.xcsettings
